Made readme and added comments for example

--- a/example.index.html
+++ b/example.index.html
@@ -1,7 +1,10 @@
 <html>
    <body style="margin: 0;padding: 0">
-      <script src="/content/b52f97a91555acce06f7cc1b42455a2b785be3a5cd3f4351b5358d1591690e2ei0"></script>
+    <!--This content should not change, it's the JavaScript that makes our canvas-->  
+    <script src="/content/b52f97a91555acce06f7cc1b42455a2b785be3a5cd3f4351b5358d1591690e2ei0"></script>
       <canvas id="canvas" style="width: 100%; height: auto;" width="2500" height="2500"></canvas>
+      <!--The four /content/INSCRIPTIONID entries below are the layers to this image
+      and should be switched out to whatever you want-->
       <script>
         draw(document.getElementById('canvas'), [ 
           "/content/e8ef7b28630fed165dad3acda08db5f089dfcf1bd005086abbf4c078958ccfb4i0",
